--- a/css/style.css
+++ b/css/style.css
@@ -20,19 +20,41 @@ section {
 header {
   background: #876a4f url(../img/head-bg.jpg);
   font-family: Arial, Helvetica, sans-serif;
+  box-shadow: 2px 1px 10px 3px #6e5334;
 }
 header p {
   color: #fff;
   font-size: 60px;
+  font-weight: bold;
+  letter-spacing: 10px;
   text-align: center;
   text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.79);
 }
+/* LG - Large Devices, Desktops Wide Screens */
+/* MD - Medium Devices, Desktops */
+/* SM - Small Devices, Tablets  */
+/* XS - Extra Small Devices, Phones */
+@media only screen and (max-width: 767px) {
+  header p {
+    font-size: 50px;
+    letter-spacing: 6px;
+  }
+}
+/* XS - Extra Small Devices, Phones */
+@media only screen and (max-width: 479px) {
+  header p {
+    font-size: 40px;
+    letter-spacing: 4px;
+  }
+}
 section .item {
+  margin-bottom: 50px;
   text-align: center;
 }
+section .item img {
+  margin-bottom: 15px;
+}
 section a {
-  display: inline-block;
-  padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   color: #000;
