--- a/css/style.less
+++ b/css/style.less
@@ -54,9 +54,12 @@ section {
 header {
 	background: #876a4f url(../img/head-bg.jpg);
 	font-family: Arial, Helvetica, sans-serif;
+	box-shadow: 2px 1px 10px 3px rgb(110, 83, 52);
 	p {
 		color: #fff;
 		font-size: 60px;
+		font-weight: bold;
+		letter-spacing: 10px;
 		text-align: center;
 		text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.79);
 	}
@@ -64,44 +67,43 @@ header {
 
 
 
-
-
-
-
-
 // *********************************************
 // **********    Медиа-запросы     *************
 
-// XS < 768 px ****** Phones 0 - 480 px
-@media (min-width: 0px) and (max-width: 480px) {
-	
+/* LG - Large Devices, Desktops Wide Screens */
+@media only screen and (max-width : 1600px) {
 
 }
-// XS < 768 px ****** Phones 481 - 767 px
-@media (min-width: 481px) and (max-width: 767px) {
-	
+
+/* MD - Medium Devices, Desktops */
+@media only screen and (max-width : 1200px) {
 
 }
-// SM >= 768 px ****** Tablets 768 - 991 px
-@media (min-width: 768px) and (max-width: 991px) {
-	
+
+/* SM - Small Devices, Tablets  */
+@media only screen and (max-width : 991px) {
 
 }
-// MD >= 992 px ****** Desktops 992 - 1199 px
-@media (min-width: 992px) and (max-width: 1199px) {
 
-
+/* XS - Extra Small Devices, Phones */
+@media only screen and (max-width : 767px) {
+	header p {
+		font-size: 50px;
+		letter-spacing: 6px;
+	}
 }
-// LG >= 1200 px ****** Desktops 1200 - 1600 px
-@media (min-width: 1200px) and (max-width: 1600px) {
 
-
+/* XS - Extra Small Devices, Phones */
+@media only screen and (max-width : 479px) {
+	header p {
+		font-size: 40px;
+		letter-spacing: 4px;
+	}
 }
-// LG >= 1601 px ****** 
-@media (min-width: 1601px) {
 
 
-}
+
+
 
 
 
@@ -119,12 +121,13 @@ header {
 
 section {
 	.item {
-		// border: 1px solid #000;
+		margin-bottom: 50px;
 		text-align: center;
+		img {
+			margin-bottom: 15px;
+		}
 	}
 	a {
-		display: inline-block;
-		padding: 10px;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 20px;
 		color: #000;
