--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 body {
   background: #f7eac9 url(../img/body-bg.png);
 }
-section {
+main {
   padding-top: 10%;
   padding-bottom: 10%;
 }
@@ -47,19 +47,29 @@ header p {
     letter-spacing: 4px;
   }
 }
-section .item {
+main .item {
   margin-bottom: 50px;
   text-align: center;
 }
-section .item img {
+main .item img {
   margin-bottom: 15px;
 }
-section a {
+main a {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   color: #000;
 }
-section a:hover {
+main a:hover {
   color: blue;
   text-decoration: none;
 }
+/* LG - Large Devices, Desktops Wide Screens */
+/* MD - Medium Devices, Desktops */
+/* SM - Small Devices, Tablets  */
+/* XS - Extra Small Devices, Phones */
+@media only screen and (max-width: 767px) {
+  main .item img {
+    margin: 0 auto;
+  }
+}
+/* XS - Extra Small Devices, Phones */
