--- a/Hotel-deluxe/css/style.less
+++ b/Hotel-deluxe/css/style.less
@@ -31,6 +31,17 @@ section {
 	}
 }
 
+// кнопка На главную
+.home-btn {
+	position: fixed;
+	z-index: 9999;
+	bottom: 5px;
+	right: 30px;
+	img {
+		width: 150px;
+	}
+}
+
 /* ************* Base colors **************** */
 
 @yellow: #ffd700;
