--- a/Smart Agency/css/style.less
+++ b/Smart Agency/css/style.less
@@ -42,6 +42,17 @@ section {
 	}
 }
 
+// кнопка На главную
+.home-btn {
+	position: fixed;
+	z-index: 9999;
+	bottom: 5px;
+	right: 30px;
+	img {
+		width: 150px;
+	}
+}
+
 /* ************* Base colors **************** */
 
 @base-black: #706b73;
