--- a/Hotel-deluxe/css/style.less
+++ b/Hotel-deluxe/css/style.less
@@ -31,14 +31,26 @@ section {
 	}
 }
 
-// кнопка На главную
+/*кнопка На главную*/
 .home-btn {
 	position: fixed;
 	z-index: 9999;
-	bottom: 5px;
-	right: 30px;
-	img {
-		width: 150px;
+	bottom: 25px;
+	right: 12px;
+	padding: 5px 20px;
+	font-size: 15px;
+	font-weight: bold;
+	color: #fff;
+	background: green;
+	text-transform: uppercase;
+	border: 2px solid #ccc;
+	border-radius: 20px;
+	box-shadow: 1px 2px 11px 0px rgba(0, 0, 0, 0.52);
+	&:hover,
+	&:focus {
+		color: #c9ffcb;
+		text-decoration: none;
+		box-shadow: 1px 2px 11px 0px rgba(0, 0, 0, 0.32);
 	}
 }
 
