--- a/css/style.less
+++ b/css/style.less
@@ -1,3 +1,7 @@
+body {
+	background: #f7eac9 url(../img/body-bg.png);
+}
+
 /* ********** Fonts files ******************* */
 
 .opn-reg {
@@ -6,10 +10,6 @@
 }
 
 /* ********** Base Settings **************** */
-
-body {
-	background: #f7eac9 url(../img/body-bg.png);
-}
 
 // input, textarea, button {
 // 	&:focus {
@@ -126,16 +126,33 @@ main {
 		img {
 			margin: 0 auto 15px;
 		}
+		p {
+			font-size: 16px;
+			color: #000;
+		}
+		a {
+		  display: inline-block;
+		  margin: 10px 20px;
+		  padding: 7px 25px;
+		  border-radius: 30px;
+		  background-image: linear-gradient(45deg, #6ab1d7 0%, #33d9de 50%, #002878 100%);
+		  background-position: 100% 0;
+		  background-size: 200% 200%;
+			font-family: Arial, Helvetica, sans-serif;
+		  font-size: 20px;
+		  font-weight: 300;
+		  color: white;
+			text-decoration: none;
+		  outline: none;
+		  box-shadow: 0 16px 32px 0 rgba(0,40,120,.35);
+		  transition: 0.35s;
+			&:hover {
+				box-shadow: 0 5px 20px 0 rgba(0,40,120,0.35);
+				background-position: 0 0;
+			}
+		}
 	}
-	a {
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 20px;
-		color: #000;
-	}
-	a:hover {
-		color: blue;
-		text-decoration: none;
-	}
+
 }
 
 
@@ -160,11 +177,7 @@ main {
 
 /* XS - Extra Small Devices, Phones */
 @media only screen and (max-width : 767px) {
-	main {
-		.item {
-			img {margin: 0 auto;}
-		}
-	}
+	
 }
 
 /* XS - Extra Small Devices, Phones */
