Айнар удалил сайт Барсмед

--- a/barsmed/css/style.css
+++ b/barsmed/css/style.css
@@ -1,276 +1,5 @@
-/* ********** Fonts files ******************* */
-/* ********** Base Settings **************** */
-input,
-textarea,
-button {
-  border: none;
-}
-input:focus,
-textarea:focus,
-button:focus {
-  outline: none;
-}
-.btn {
-  padding: 10px 15px;
-  color: #fff;
-  background: #70a335;
-  border-radius: 15px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-.btn:hover {
-  color: #fff;
-  box-shadow: 0px 8px 17px 5px #cccccc7d;
-}
-.btn:active {
-  box-shadow: 0px 3px 17px 5px #cccccc7d;
-}
-/* ************* Base colors **************** */
-nav.top-menu {
-  background: #70a335;
-}
-nav.top-menu a {
-  display: inline-block;
-  padding: 10px 15px;
-  color: #edf3e6;
-}
-nav.top-menu a.first {
-  padding-left: 0;
-  color: #fff;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-nav.top-menu a.first span {
-  color: #edf3e6;
-  font-size: 11px;
-  font-weight: normal;
-}
-nav.top-menu .icon-menu {
-  display: inline-block;
-  float: right;
-}
-nav.top-menu .icon-menu a {
-  padding: 10px 8px;
-  font-size: 18px;
-}
-nav.top-menu .icon-menu a:hover {
-  color: #ccc;
-}
-.logo .logo-img {
-  margin-top: 11px;
-}
-.logo .logo-img h1 {
-  margin: 0;
-  font-size: 40px;
-  color: #618d2d;
-  text-transform: uppercase;
-}
-.logo .logo-img p {
-  font-size: 11px;
-}
-.logo .adress {
-  position: relative;
-  margin-top: 14px;
-}
-.logo .adress .icon-adress {
-  position: absolute;
-  top: 6px;
-  left: -42px;
-}
-.logo .adress .icon-adress i {
-  color: #2591b6;
-  font-size: 32px;
-}
-.logo .adress p {
-  margin-bottom: 6px;
-}
-.logo .adress span {
-  font-weight: bold;
-}
-.logo .adress i {
-  color: #ccc;
-}
-.logo .phone {
-  position: relative;
-  margin-top: 14px;
-}
-.logo .phone .icon-phone {
-  position: absolute;
-  top: 6px;
-  left: -42px;
-}
-.logo .phone .icon-phone i {
-  color: #2591b6;
-  font-size: 32px;
-}
-.logo .phone p {
-  margin-bottom: 6px;
-}
-.logo .phone span {
-  font-size: 18px;
-  font-weight: bold;
-}
-.logo .phone i {
-  color: #ccc;
-  font-size: 14px;
-}
-nav.main-menu {
-  background: #f3f3f3;
-  /* ul {
-		margin: 0;
-		padding: 0;
-		list-style: none;
-		li {
-			display: inline-block;
-			padding: 13px 12px;
-			color: #656565;
-			font-size: 20px;
-			text-transform: uppercase;
-			&:hover {
-				padding: 1px 12px;
-				color: #656565;
-				font-size: 26px;
-				font-weight: bold;
-				text-decoration: none;
-			}
-		}
-	} */
-}
-nav.main-menu a {
-  display: inline-block;
-  padding: 13px 12px;
-  color: #656565;
-  font-size: 20px;
-  text-transform: uppercase;
-}
-nav.main-menu a:hover {
-  padding: 1px 12px;
-  color: #656565;
-  font-weight: bold;
-  text-decoration: none;
-}
-nav.main-menu a:hover span {
-  font-size: 20px;
-}
-nav.main-menu a span {
-  color: #2591b6;
-}
-.carousel-caption {
-  top: 5px;
-  left: 100px;
-  width: 450px;
-  text-align: left;
-}
-.carousel-caption h2 {
-  margin-bottom: 20px;
-  font-size: 22px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-.carousel-caption p {
-  line-height: 23px;
-}
-.carousel-caption a.btn {
-  margin-top: 20px;
-  padding: 10px 60px;
-  font-size: 18px;
-  color: #fff;
-}
-.carousel-control {
-  width: 7%;
-}
-/* LG - Large Devices, Desktops Wide Screens */
-/* MD - Medium Devices, Desktops 992-1199px */
-/* SM - Small Devices, Tablets 768-991px */
-/* XS - Extra Small Devices, Phones 481-767 */
-/* XS - Extra Small Devices, Phones 0-480 */
-main {
-  margin-bottom: 200px;
-  padding-top: 67px;
-}
-main .heading {
+h1 {
+  margin-top: 100px;
+  font-size: 50px;
   text-align: center;
-  text-transform: uppercase;
-}
-main .heading h2 {
-  margin-bottom: 15px;
-  font-size: 24px;
-  font-weight: bold;
-}
-main .heading p {
-  font-size: 15px;
-}
-main .nav {
-  margin-top: 95px;
-}
-main .tab-content > .tab-pane {
-  margin-top: 92px;
-}
-main .tab-content > .tab-pane h3 {
-  margin-top: 30px;
-  margin-bottom: 15px;
-  font-size: 24px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-main .tab-content > .tab-pane h4 {
-  margin-top: 30px;
-  margin-bottom: 15px;
-  font-weight: bold;
-}
-main .tab-content > .tab-pane h4 span {
-  color: #2591b6;
-  font-size: 20px;
-}
-main .tab-content > .tab-pane p.border-left {
-  padding-left: 11px;
-  border-left: 3px solid #c4c4c4;
-}
-main .tab-content > .tab-pane p.title {
-  margin-top: 22px;
-  margin-bottom: 5px;
-  color: #26a0a9;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-main .tab-content > .tab-pane a.btn {
-  margin-top: 15px;
-  width: 100%;
-}
-main .tab-content > .tab-pane a.link {
-  color: #70a335;
-  font-weight: bold;
-  text-decoration: underline;
-  text-transform: uppercase;
-}
-main .tab-content > .tab-pane a.link:hover {
-  text-decoration: none;
-}
-main .tab-content > .tab-pane ul {
-  padding: 0;
-  list-style: none;
-}
-main .tab-content > .tab-pane ul li span {
-  color: #2591b6;
-  font-size: 12px;
-}
-main .tab-content > .tab-pane p.call {
-  margin-top: 30px;
-  margin-bottom: 15px;
-  font-size: 18px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-main .tab-content > .tab-pane form {
-  margin-top: 30px;
-}
-main .tab-content > .tab-pane form input {
-  margin-bottom: 20px;
-  padding: 10px 15px;
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 15px;
-}
-main .tab-content > .tab-pane form button {
-  width: 100%;
 }
